# pydantic-protobuf3

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.rst  pyproject.toml
.github/workflows/: ci.yaml
tests/: test_dummy.py  test_pydantic_protobuf3.py
